// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs Bad source input 1`] = `
Array [
  Object {
    "exn": Object {
      "RE_EXN_ID": "Caml_js_exceptions.Error/1",
      "_1": [TypeError: source.str.charAt is not a function],
    },
    "kind": "Compile",
    "location": undefined,
    "message": "An exception was thrown while rendering this template. This is probably due to malformed input.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Lexer Illegal binding names 1`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "\\"null\\" is a reserved name",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Illegal binding names 2`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "\\"false\\" is a reserved name",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Illegal characters 1`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 11,
  },
  "message": "Invalid character: \\"*\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Illegal characters 2`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected character: \\". %\\". Expected: \\"...\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Illegal characters 3`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 13,
  },
  "message": "Unexpected character: \\"%\\". Expected: \\"}\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Illegal characters 4`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 10,
  },
  "message": "Unexpected character: \\"%}\\". Expected: \\"}}\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Illegal characters 5`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 10,
  },
  "message": "Unexpected character: \\"b \\". Expected: \\"}}\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Illegal characters 6`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 6,
  },
  "message": "Invalid character: \\"?\\".",
  "path": Array [
    "BadCharacter",
  ],
}
`;

exports[`Lexer Other stuff 1`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 7,
  },
  "message": "Unterminated string.",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Other stuff 2`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 5,
  },
  "message": "Unterminated comment.",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Other stuff 3`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 5,
  },
  "message": "Unterminated comment.",
  "path": Array [
    "BadComment",
  ],
}
`;

exports[`Lexer Other stuff 4`] = `
Object {
  "exn": undefined,
  "kind": "Syntax",
  "location": Object {
    "character": 7,
  },
  "message": "Unexpected end of file.",
  "path": Array [
    null,
  ],
}
`;

exports[`Lexer Other stuff 5`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "\\"--1\\" is an illegal identifier name.",
  "path": Array [
    "BadIdentifier",
  ],
}
`;

exports[`Parser Illegal binding name 1`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 10,
  },
  "message": "\\"null\\" is a reserved name",
  "path": Array [
    "BadBinding",
  ],
}
`;

exports[`Parser Illegal binding name 2`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 13,
  },
  "message": "\\"null\\" is a reserved name",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Invalid statements 1`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Invalid statement: \\"c\\".",
  "path": Array [
    "BadStatement",
  ],
}
`;

exports[`Parser Unexpected tokens 1`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\"{\\".",
  "path": Array [
    "BadToken",
  ],
}
`;

exports[`Parser Unexpected tokens 2`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\"[\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 3`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\"}\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 4`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\"]\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 5`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\",\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 6`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 10,
  },
  "message": "Unexpected token: \\"/\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 7`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\":\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 8`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\"\\"a\\"\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 9`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\"1\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 10`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 10,
  },
  "message": "Unexpected token: \\"[\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 11`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 10,
  },
  "message": "Unexpected token: \\"1\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 12`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 13,
  },
  "message": "Unexpected token: \\"[\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 13`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 13,
  },
  "message": "Unexpected token: \\"1\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 14`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 29,
  },
  "message": "Unexpected token: \\"[end of file]\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 15`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 32,
  },
  "message": "Unexpected token: \\"[end of file]\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 16`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\"/\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 17`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 8,
  },
  "message": "Unexpected token: \\"#\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 18`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 21,
  },
  "message": "Unexpected token: \\"%}  d\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 19`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 8,
  },
  "message": "Unexpected token: \\"1\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 20`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 4,
  },
  "message": "Unexpected token: \\"...\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 21`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 4,
  },
  "message": "Unexpected token: \\"=\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 22`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 10,
  },
  "message": "Unexpected token: \\"~\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Parser Unexpected tokens 23`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 8,
  },
  "message": "Unexpected token: \\"match\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Count mismatch failure 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 4,
    },
    "message": "The number of patterns does not match the number of data.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Count mismatch failure 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 8,
    },
    "message": "The number of patterns does not match the number of data.",
    "path": Array [
      null,
    ],
  },
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 8,
    },
    "message": "The number of patterns does not match the number of data.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Illegal bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 25,
    },
    "message": "Unexpected token: \\"Abc\\".",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Illegal bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "\\"null\\" is an illegal identifier name.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Illegal bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 24,
    },
    "message": "\\"true\\" is an illegal identifier name.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Illegal bindings 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 25,
    },
    "message": "\\"false\\" is an illegal identifier name.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Illegal bindings 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 26,
    },
    "message": "\\"1\\" is an illegal identifier name.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Illegal bindings 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "\\"null\\" is a reserved name",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Illegal bindings 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "\\"null\\" is a reserved name",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Illegal bindings 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Parse",
    "location": Object {
      "character": 8,
    },
    "message": "Unexpected token: \\"1\\".",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Match failure 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 5,
    },
    "message": "None of the patterns match the data. Consider a catch-all case to avoid this.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Match failure 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 9,
    },
    "message": "None of the patterns match the data. Consider a catch-all case to avoid this.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Missing bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 9,
    },
    "message": "Binding \\"b\\" does not exist.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Missing bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 15,
    },
    "message": "Binding \\"b\\" does not exist.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Missing bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 8,
    },
    "message": "\\"c\\" is type array but the data is type null.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type boolean but the data is type string.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type boolean but the data is type string.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type boolean but the data is type number.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type boolean but the data is type number.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type boolean but the data is type array.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type boolean but the data is type array.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Boolean pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type boolean but the data is type object.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type object but the data is type string.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type object but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type object but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type object but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type object but the data is type array.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type object but the data is type number.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors Object pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type object but the data is type number.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type string.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type string.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type array but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type array but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type array but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 7`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type number.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 8`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type object.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors array pattern 9`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type array but the data is type object.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type number but the data is type string.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type number but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type number but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type number but the data is type array.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors number pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type number but the data is type object.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type string but the data is type number.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type string but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type string but the data is type boolean.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 21,
    },
    "message": "This pattern is type string but the data is type array.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Type errors string pattern 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 22,
    },
    "message": "This pattern is type string but the data is type object.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Patterns Unexpected tokens 1`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 17,
  },
  "message": "Unexpected token: \\"}\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 2`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 18,
  },
  "message": "Unexpected token: \\",\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 3`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 18,
  },
  "message": "Unexpected token: \\"1\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 4`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 22,
  },
  "message": "Unexpected token: \\"[\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 5`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 20,
  },
  "message": "Unexpected token: \\"\\"a\\"\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 6`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 21,
  },
  "message": "Unexpected token: \\",\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 7`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 24,
  },
  "message": "Unexpected token: \\"\\"a\\"\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 8`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 24,
  },
  "message": "Unexpected token: \\"{\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 9`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 26,
  },
  "message": "Unexpected token: \\"[\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 10`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 26,
  },
  "message": "Unexpected token: \\"b\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 11`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 20,
  },
  "message": "Unexpected token: \\"b\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 12`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 20,
  },
  "message": "Unexpected token: \\"]\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 13`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 12,
  },
  "message": "Unexpected token: \\"}\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 14`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 12,
  },
  "message": "Unexpected token: \\"match\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 15`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 19,
  },
  "message": "Invalid statement: \\"a\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 16`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 27,
  },
  "message": "Unexpected token: \\"map\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 17`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 27,
  },
  "message": "Unexpected token: \\"1\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 18`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 14,
  },
  "message": "Unexpected token: \\"B\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 19`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 14,
  },
  "message": "Unexpected token: \\"1\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns Unexpected tokens 20`] = `
Object {
  "exn": undefined,
  "kind": "Parse",
  "location": Object {
    "character": 6,
  },
  "message": "Unexpected token: \\"1\\".",
  "path": Array [
    null,
  ],
}
`;

exports[`Patterns You can't bind a value more than once. 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Pattern",
    "location": Object {
      "character": 21,
    },
    "message": "\\"x\\" is bound multiple times in this pattern.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Error messages display component name correctly 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"a\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "A",
      null,
    ],
  },
]
`;

exports[`Rendering Exceptions thrown in components are caught correctly 1`] = `
Array [
  Object {
    "exn": Object {
      "Error": [Error],
      "RE_EXN_ID": "Failure",
      "_1": "fail.",
    },
    "kind": "Render",
    "location": undefined,
    "message": "An exception was thrown while rendering a template component.",
    "path": Array [
      "ExceptionsTest",
    ],
  },
]
`;

exports[`Rendering Missing bindings 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"z\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Missing bindings 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "Template child \\"Z\\" does not exist.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Missing bindings 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "Component \\"Z\\" does not exist.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Missing bindings 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "Template child \\"C\\" does not exist.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Multiple render errors are all reported 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"a\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      null,
    ],
  },
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 12,
    },
    "message": "\\"b\\" is type array. I can only echo strings and numbers.",
    "path": Array [
      null,
    ],
  },
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 20,
    },
    "message": "\\"c\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Type mismatches 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 8,
    },
    "message": "\\"a\\" is a string. I can only map arrays.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Type mismatches 2`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 8,
    },
    "message": "\\"b\\" is a boolean. I can only map arrays.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Type mismatches 3`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Type",
    "location": Object {
      "character": 8,
    },
    "message": "\\"a\\" is a string. I can only map arrays.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Type mismatches 4`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"b\\" is type boolean. I can only echo strings and numbers.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Type mismatches 5`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"c\\" is type array. I can only echo strings and numbers.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Rendering Type mismatches 6`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 8,
    },
    "message": "\\"b\\" is type boolean. I can only echo strings and numbers.",
    "path": Array [
      null,
    ],
  },
]
`;

exports[`Stack trace is rendered correctly child templates 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 12,
    },
    "message": "\\"y\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "section: B#Children",
      "A",
    ],
  },
]
`;

exports[`Stack trace is rendered correctly components 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 4,
    },
    "message": "\\"c\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "C",
      "match",
      "B",
      "A",
    ],
  },
]
`;

exports[`Stack trace is rendered correctly map 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 23,
    },
    "message": "\\"c\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      0,
      "map",
      "MapTest",
    ],
  },
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 23,
    },
    "message": "\\"c\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      1,
      "map",
      "MapTest",
    ],
  },
]
`;

exports[`Stack trace is rendered correctly match 1`] = `
Array [
  Object {
    "exn": undefined,
    "kind": "Render",
    "location": Object {
      "character": 50,
    },
    "message": "\\"b\\" is type null. I can only echo strings and numbers.",
    "path": Array [
      "match",
      "match",
      "MatchTest",
    ],
  },
]
`;
